k8s/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lb
---

---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: ingress-nginx

# ---
